[gd_scene load_steps=5 format=2]

[ext_resource path="res://import/interface/theme/font/default_font_comfortaa.tres" type="DynamicFont" id=1]
[ext_resource path="res://import/interface/theme/font/comfortaa_tips.tres" type="DynamicFont" id=2]
[ext_resource path="res://World.tscn" type="PackedScene" id=3]
[ext_resource path="res://Menu/Menu.gd" type="Script" id=4]

[node name="StartMenu" type="CanvasLayer"]
script = ExtResource( 4 )

[node name="Background" type="Spatial" parent="."]

[node name="World" parent="Background" instance=ExtResource( 3 )]

[node name="ViewportContainer" type="ViewportContainer" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Viewport" type="Viewport" parent="Background/ViewportContainer"]
size = Vector2( 1024, 600 )
handle_input_locally = false
render_target_update_mode = 3

[node name="Camera" type="Camera" parent="Background/ViewportContainer/Viewport"]
transform = Transform( -0.999291, 0, -0.0376554, 0, 1, 0, 0.0376554, 0, -0.999291, 0.385437, 0.671848, -1.36983 )

[node name="Menu" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MarginContainer" type="MarginContainer" parent="Menu"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_top = 80
custom_constants/margin_left = 60

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/MarginContainer"]
margin_left = 60.0
margin_top = 80.0
margin_right = 1024.0
margin_bottom = 600.0

[node name="Label" type="Label" parent="Menu/MarginContainer/VBoxContainer"]
margin_right = 145.0
margin_bottom = 35.0
size_flags_horizontal = 0
custom_colors/font_color_shadow = Color( 0.129412, 0.0588235, 0.305882, 1 )
custom_fonts/font = ExtResource( 1 )
text = "Ruby Rpg"

[node name="MarginContainer" type="MarginContainer" parent="Menu/MarginContainer/VBoxContainer"]
margin_top = 39.0
margin_right = 964.0
margin_bottom = 64.0
rect_min_size = Vector2( 0, 25 )

[node name="Save" type="Button" parent="Menu/MarginContainer/VBoxContainer"]
margin_top = 68.0
margin_right = 45.0
margin_bottom = 89.0
size_flags_horizontal = 0
custom_fonts/font = ExtResource( 2 )
text = "Save"
align = 0

[node name="Load" type="Button" parent="Menu/MarginContainer/VBoxContainer"]
margin_top = 93.0
margin_right = 47.0
margin_bottom = 114.0
size_flags_horizontal = 0
custom_fonts/font = ExtResource( 2 )
text = "Load"
align = 0

[node name="Restart" type="Button" parent="Menu/MarginContainer/VBoxContainer"]
margin_top = 118.0
margin_right = 60.0
margin_bottom = 139.0
size_flags_horizontal = 0
custom_fonts/font = ExtResource( 2 )
text = "Restart"
align = 0

[node name="Settings" type="Button" parent="Menu/MarginContainer/VBoxContainer"]
margin_top = 143.0
margin_right = 68.0
margin_bottom = 164.0
size_flags_horizontal = 0
custom_fonts/font = ExtResource( 2 )
text = "Settings"
align = 0

[node name="Quit" type="Button" parent="Menu/MarginContainer/VBoxContainer"]
margin_top = 168.0
margin_right = 42.0
margin_bottom = 189.0
size_flags_horizontal = 0
custom_fonts/font = ExtResource( 2 )
text = "Quit"
align = 0

[connection signal="pressed" from="Menu/MarginContainer/VBoxContainer/Save" to="." method="_on_Save_pressed"]
[connection signal="pressed" from="Menu/MarginContainer/VBoxContainer/Load" to="." method="_on_Load_pressed"]
[connection signal="pressed" from="Menu/MarginContainer/VBoxContainer/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="Menu/MarginContainer/VBoxContainer/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="Menu/MarginContainer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
